--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
   },
   "plugins": ["react", "react-native"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, {"SwitchCase": 1}],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
